--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://github.com/Xebastits/CIT17-LearningContract",
+  "homepage": "https://xebastits.github.io/CIT17-LearningContract/",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
